--- a/VGN/.gitignore
+++ b/VGN/.gitignore
@@ -11,6 +11,22 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 *.log
+*.lnk
+Player.log.lnk
+
+# Firebase bullshit
+/[Aa]ssets/Editor\ Default\ Resources/
+/[Aa]ssets/ExternalDependencyManager/
+/[Aa]ssets/Firebase/
+/[Aa]ssets/GeneratedLocalRepo/
+/[Aa]ssets/Plugins/
+/[Aa]ssets/StreamingAssets/
+Editor\ Default\ Resources.meta
+ExternalDependencyManager.meta
+Firebase.meta
+GeneratedLocalRepo.meta
+Plugins.meta
+StreamingAssets.meta
 
 # By default unity supports Blender asset imports, *.blend1 blender files do not need to be commited to version control.
 *.blend1
